fix share feature